# NPC-Builder

./: .gitignore  README.md
Backend/: npc_generator.py  npc_mesh_gen.py  pyproject.toml  requirements.txt
Backend/agent_tools/: bg_remover.py  depth_grayscale.py  image_generation.py  image_transformation.py  search_tool.py
Backend/agents/: npc_generator.py
Backend/system_prompt/: negative_prompt.py  query_process_prompt.py  search_agent_prompt.py
