[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "deepagents>=0.2.5",
    "diffusers>=0.35.2",
    "google-search-results>=2.4.2",
    "huggingface-hub>=0.16.4",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.0.0",
    "langchain-mcp-adapters>=0.1.12",
    "langgraph>=1.0.2",
    "rembg>=2.0.67",
    "tavily-python>=0.7.12",
    "tokenizers==0.19.1",
    "torch>=2.9.0",
    "transformers>=4.44.2",
]
